2024/07.18/README.md
# 📅 2024/07/16/화

## 🚀 주간 목표

pravel api 시도

frontend mentor api 작업

정처기 실기 공부 D-10

## 💪🏻 오늘 한 일

- [x] 정처기 파이썬 다시 풀기

- [x] frontendMentor - filter 시키기

- [x] pravel - 상세 페이지 마크업

## 🫵🏻 내일 할 일

- 정처기

- pravel 작업

- frontendmentor 작업

## 🔎 공부해볼 주제

- react : 원리, 훅, 상태관리

- nextjs

- 라우팅
  ㄴ next/router, next/navigation

- react-router-dom
  ㄴ useParams() : 동적 경로의 파라미터를 가져올 수 있음

- 렌더링
  ㄴ SPA에서 url이 바뀌면 CSR과 SSR에서는 어떤 식으로 렌더링?동작?하는걸까?

- SPA, MPA
  ㄴ 새로고침하면 어떻게 동작할까

- typescript
  ㄴ ! : null 또는 undefined를 타입으로 받는 경우에 현재 가지고 있는 값이 null 또는 undefined이 아니라는 것을 직접 알려주는것

- throttle, debounce

- suspense

## 👀 오늘의 궁금증

- redirect vs router.push

- react랑 react-dom을 구분하는 이유가 뭐지?

- 세그먼트 / 쿼리 스트링 ...구분이 어떻게 되는거지 뭐가 뭐인거지

## ✏️메모장

- frontendmentor countries : 원어명/통화/언어 해결하기 / 무한 스크롤링 / 검색 / 분류 / select 접근성 지키면서 커스텀하기

- pravel : 전화번호 바로 걸기 방법 / 크기만 다른 동일 아이콘 svg 처리
